--- a/client/app/styles/slideshow.scss
+++ b/client/app/styles/slideshow.scss
@@ -1,6 +1,9 @@
 
-$fa-font-path: "../bower_components/font-awesome/fonts/";
+$fa-font-path: "../bower_components/font-awesome/fonts";
+@import "font-awesome/scss/font-awesome.scss";
 
+
+$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
