edit slide show text

--- a/client/app/partials/slideshow.html
+++ b/client/app/partials/slideshow.html
@@ -7,7 +7,7 @@
     <img ng-src="images/{{image.src}}" />
     <i class="fa fa-chevron-left" aria-hidden="true" ng-click="prev()"></i>
     <i class="fa fa-chevron-right" aria-hidden="true" ng-click="next()"></i>
-    <i class="fa fa-camera" aria-hidden="true"> {{currentImg}} / {{images.length}}</i>
+    <i class="fa fa-camera" aria-hidden="true"> {{currentIndex + 1}} / {{images.length}}</i>
 
   </div>
 
