--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -83,9 +83,9 @@
       <a  href="#slideshow">
         <img src="./images/butter.jpg" alt="" />
         <div ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow4}">
-          <h3>Slide Show</h3>
+          <h3>Puppies Gallery</h3>
           <p>
-            Puppies Gallery
+            AngularJS slide show directive for dog lovers and Game of Thrones fans.
           </p>
         </div>
       </a>
