--- a/client/app/partials/slideshow.html
+++ b/client/app/partials/slideshow.html
@@ -1,5 +1,5 @@
 <div  class="slideShow"ng-repeat="image in images" ng-show="image.visible" layout='row' layout-xs='column' layout-padding layout-wrap>
-  <div class="" flex='100'>
+  <div class="" flex='100' flex-xs='100'>
     <h2>Which pooch you like most?</h2>
   </div>
   <div class="slideImg" flex='55' flex-xs='100'>
