try getting rid of column

--- a/client/app/partials/slideshow.html
+++ b/client/app/partials/slideshow.html
@@ -1,4 +1,4 @@
-<div  class="slideShow"ng-repeat="image in images" ng-show="image.visible" layout='row' layout-xs='column' layout-padding layout-wrap>
+<div class="slideShow" ng-repeat="image in images" ng-show="image.visible" layout='row' layout-padding layout-wrap>
   <div class="" flex='100' flex-xs='100'>
     <h2>Which pooch you like most?</h2>
   </div>
