add flex-gt-md=25 to fit large screen better

--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -19,7 +19,7 @@
 
   <div layout="row" layout-wrap class="projectsWrap fade-in" >
   <!-- <div layout="row" layout-wrap layout-xs="column" layout-margin class=""> -->
-  <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
+  <div flex="33" flex-gt-md='25' flex-sm="50" flex-xs="100" class="projectsDiv">
     <a href="https://hirejing.herokuapp.com/#/">
       <img src="./images/stories.png" alt="" />
       <div ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow3}">
@@ -40,7 +40,7 @@
     </div>
   </div>
 
-  <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv ">
+  <div flex="33" flex-gt-md='25' flex-sm="50" flex-xs="100" class="projectsDiv ">
     <a href="https://angularpizzaplanet.herokuapp.com/">
       <img src="./images/pizza.png" alt="" />
       <div  ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow2}">
@@ -62,7 +62,7 @@
 
   </div>
 
-    <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
+    <div flex="33" flex-gt-md='25' flex-sm="50" flex-xs="100" class="projectsDiv">
       <a  href="https://twittersearchmap.herokuapp.com/">
         <img src="./images/twittersearch.png" alt="" />
         <div ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow1}">
@@ -79,7 +79,7 @@
       </div>
     </div>
 
-    <div flex="33" flex-sm="50" flex-xs="100" class="projectsDiv">
+    <div flex="33" flex-gt-md='25' flex-sm="50" flex-xs="100" class="projectsDiv">
       <a  href="#slideshow">
         <img src="./images/butter.jpg" alt="" />
         <div ng-class="{intro: !is_touch_device, introTouchDeviceHide: is_touch_device, introTouchDeviceShow: is_touch_device && introShow4}">
