--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -59,8 +59,8 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 .header {
   width: 90%;
   margin: 50px auto 40px auto;
-  color: #4d4d4d;
-  max-width: 900px;
+  color: #333333;
+  max-width: 1100px;
   font-size: 20px;
   .headline {
 
@@ -193,3 +193,12 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
     padding: 30px;
   }
 }
+
+/* Responsive: Portrait tablets and up */
+// @media screen and (min-width: 768px) {
+//   .mainWrap {
+//     max-width: 90
+//   }
+//
+//
+// }
