--- a/client/app/partials/slideshow.html
+++ b/client/app/partials/slideshow.html
@@ -2,11 +2,11 @@
   <div class="" flex='100'>
     <h2>Which pooch you like most?</h2>
   </div>
-  <div class="slideImg" flex='55' flex-xs='100'>
+  <div class="slideImg" flex='55' flex-xs='100' md-swipe-right="prev()" md-swipe-left="next()">
 
     <img ng-src="images/{{image.src}}" />
-    <i class="fa fa-chevron-left" aria-hidden="true" ng-click="prev()" md-swipe-right="prev()"></i>
-    <i class="fa fa-chevron-right" aria-hidden="true" ng-click="next()" md-swipe-left="next()"></i>
+    <i class="fa fa-chevron-left" aria-hidden="true" ng-click="prev()"></i>
+    <i class="fa fa-chevron-right" aria-hidden="true" ng-click="next()" ></i>
     <i class="fa fa-camera" aria-hidden="true"> {{currentIndex + 1}} / {{images.length}}</i>
 
   </div>
