--- a/client/app/views/sticky-header.html
+++ b/client/app/views/sticky-header.html
@@ -15,7 +15,11 @@
 
     </div>
   </nav>
-  <section layout='row' class="hikingImg">
+  <section layout='row' class="hikingImg" id="mainGallery">
+    <div class="">
+      <!-- <h2>Hiking is the best way to make you feel like you did something all day.</h2> -->
+
+    </div>
   </section>
   <section layout'row' class="textWrap">
     <div class="textArea">
