--- a/client/app/styles/sticky-header.scss
+++ b/client/app/styles/sticky-header.scss
@@ -54,21 +54,30 @@ main {
     top: 0px;
   }
   .hikingImg {
-    background-image: url("../../images/tent.jpg");
+    // background-image: url("../../images/tent.jpg");
+
     background-size: cover;
     width: 100%;
     height: 670px;
-
+    -webkit-transition: background-image 1s ease-in-out;
+    -moz-transition: background-image 1s ease-in-out;
+    -o-transition: background-image 1s ease-in-out;
+    transition: background-image 1s ease-in-out;
     background-position: bottom;
     position: fixed;
     top:0px;
     z-index: 19;
+    h2 {
+      background-color: white;
+      display: block;
+      height: 60px;
+      width: 600px;
+    }
   }
   .textWrap {
     margin-top: 670px;
     z-index: 500;
     width: 100%;
-
   }
   .textArea {
     width: 100%;
